Updated DB Configuration

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,2 @@
 PORT = 5051
-MONGODB_URI = mongodb://localhost:27017/budget_tracker
+MONGODB_URI = mongodb+srv://Sasikumar:Expense-Budget-Tracker@budget.5e8kd.mongodb.net/Budget_Tracker
