--- a/back-end/.env
+++ b/back-end/.env
@@ -1,3 +1,3 @@
 PORT = 5051
 MONGODB_URI = mongodb+srv://Sasikumar:Expense-Budget-Tracker@budget.5e8kd.mongodb.net/Budget_Tracker
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://expense-tracker-a5el.vercel.app
